# chess-commentator

./: Dockerfile  README.md  pyproject.toml
data/: example_data_dump.txt
src/: manage.py
src/conf/: settings.py
src/entities/: entities.py  types.py
src/services/: chess_commentator.py  llm_manager.py  socket_connection.py
